# Fourier-Epicycles

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fourier_draw
src/: dft.cpp  draw.cpp  main.cpp
